src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--background: #ffffff;
	--foreground: #171717;
}

@media (prefers-color-scheme: dark) {
	:root {
		--background: #0a0a0a;
		--foreground: #ededed;
	}
}

body {
	color: var(--foreground);
	background: var(--background);
	font-family: Arial, Helvetica, sans-serif;
}

model-viewer::part(default-ar-button) {
	position: absolute;
	top: 60px;
	right: 40px; /* Adjust as needed */
	width: 50px;
	height: 50px;
	display: flex !important;
	align-items: center;
	justify-content: center;
	visibility: visible !important;
	opacity: 1 !important;
	z-index: 5000 !important;
}

